5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1875_2873.log
== TEST (2019-07-02 18:11:26) 
-- CODE:
from numpy import*
t=array(eval(input"Digite a matriz: "))
for i in shape[0]:
	print(i)
-- ERROR:
File "XXXX", line 2
    t=array(eval(input"Digite a matriz: "))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:11:47) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
for i in shape[0]:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:11:54) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
for i in shape[0]:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:11:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
for i in shape[0]:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:12:15) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
for i in t:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:12:23) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
for i in t:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:12:44) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
for i in j:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:13:44) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
h=0
for i in range(0,2):
	t[i,2]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:14:42) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(sum(t[0:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:15:28) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(sum(t[:0]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:15:57) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(sum(t[1:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:16:16) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(sum(t[0:0]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:16:22) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(sum(t[0:1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:16:52) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(t.shape[0])
print(sum(t[0:1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:17:12) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(t.shape[0])
print(range(0,3))
print(sum(t[0:1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:17:37) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(t.shape[0])
print(range[0,3])
print(sum(t[0:1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:17:50) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
print(t.shape[0])
for i in range(0,3):
	print(i)
print(sum(t[0:1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:19:00) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
for i in range(0,v):
	u=t[0,i]
	print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:19:16) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
for i in range(0,v):
	u=t[i,0]
	print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:20:07) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
p=zeros()
for i in range(0,v):
	u=t[i,0]
	i=t[0,i]
	print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:20:16) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]

for i in range(0,v):
	u=t[i,0]
	i=t[0,i]
	print(u)
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:20:25) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]

for i in range(0,v):
	u=t[i,0]
	j=t[0,i]
	print(u)
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:20:36) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]

for i in range(0,v):
	u=t[i,0]

	print(u)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:06) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v+1,dtype=int)
print(o)
for i in range(0,v):
	u=t[i,0]

	print(u)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:11) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=int)
print(o)
for i in range(0,v):
	u=t[i,0]

	print(u)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:30) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=int)
print(o)
for i in range(0,v):
	u=t[i,0]
	o[i]=u

	print(u)
print(0)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:36) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=int)
print(o)
for i in range(0,v):
	u=t[i,0]
	o[i]=u

	print(u)
print(o)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:43) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
print(o)
for i in range(0,v):
	u=t[i,0]
	o[i]=u

	print(u)
print(o)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:22:24) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
print(o)
for i in range(0,v):
	n=t[0,1]
	print(n)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:22:32) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
print(o)
for i in range(0,v):
	n=t[0,i]
	print(n)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:22:37) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
print(o)
for i in range(0,v):
	n=t[0,i]
	print(n)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:19) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	print(n)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:24:07) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
print(k)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:24:19) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
print(o)	
print(k)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:24) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
for i in range(0,v):
	b[i]=u[i]+k[i]
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:41) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
print(n)
for i in range(0,v):
	b[i]=u[i]+k[i]
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:45) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
print(b)
for i in range(0,v):
	b[i]=u[i]+k[i]
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:11) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
print(b)
for i in range(0,v):
	b[i]=o[i]+k[i]
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:20) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
print(b)
for i in range(0,v):
	b[i]=o[i]*k[i]
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:38) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
print(b)
for i in range(0,v):
	b[i]=o[i]*k[i]

print(sum(b))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:49) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
print(b)
for i in range(0,v):
	b[i]=o[i]*k[i]

print(sum(b)/v)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:27:03) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)
print(b)
for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:27:11) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- EXECUTION TIME:
0.895304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:27:13) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:27:24) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- EXECUTION TIME:
0.997316
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:27:29) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:27:40) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- EXECUTION TIME:
1.18367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:27:46) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:29:01) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:30:18) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:30:39) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:31:05) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:31:30) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:33:44) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
print(b)
print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:34:28) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
print(b)
print(sum(b))
print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:34:36) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
print(b)
print(sum(b))
print(v)
print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:34:52) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
print(b)
print(sum(b))
print(v)
print(sum(b)/v)
print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:35:17) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:35:23) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- EXECUTION TIME:
1.09384
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:36:37) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:36:41) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- EXECUTION TIME:
0.891455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:38:45) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]

print(round(sum(b)/v,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:39:43) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:39:46) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:39:58) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)
y=string(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:02) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)
y=string(y)
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:08) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)
y=string.(y)
print(y)

-- ERROR:
File "XXXX", line 17
    y=string.(y)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:14) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:33) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:40:41) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
1.11243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:41:12) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:42:33) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
1.14882
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:44) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:42:55) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
0.866512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:05) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:25) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:31) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:32) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:32) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:32) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:33) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:33) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:33) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:33) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:33) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:34) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:43) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:43) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:51) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:12) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
1.00152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:17) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:20) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
0.835425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:28) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
0.900207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:34) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:40) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
1.08908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 2, in <module>
    t=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:42) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:46) 
-- CODE:
from numpy import*
t=array(eval(input("Digite a matriz: ")))
v=t.shape[0]
o=zeros(v,dtype=float)
k=zeros(v,dtype=float)
for i in range(0,v):
	u=t[i,0]
	o[i]=u
for i in range(0,v):
	n=t[i,1]
	k[i]=n
b=zeros(v,dtype=float)

for i in range(0,v):
	b[i]=o[i]*k[i]
y=round(sum(b)/v,2)

print(y)

-- EXECUTION TIME:
0.800909
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
45.05
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:
27.73
-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
